# 2do

./: .gitignore  CHANGELOG.rst  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
_2do/: cli.py  utils.py
